ingress-lb/mqtt-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mqtt-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: mqtt-ingress.e39194dd14114fa79df1.southeastasia.aksapp.io
    http:
      paths:
      - backend:
          serviceName: mqtt
          servicePort: 9001
        path: /
